--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
               <h2 class="card-title noMargin"><span id="question">Question: </span></h2>
             </div>
           </div>
-          <div class="card bg-light mb-3 cards answer" id="ans1" value="1">
+          <div class="card bg-light mb-3 cards" id="ans1" value="1">
             <div class="card-body answer" value="1">
               <h4 class="card-title noMargin" value="1"><span id="opt1" value="1">Option 1: </span></h4>
             </div>
           </div>
-          <div class="card bg-light mb-3 cards answer" id="ans2" value="2">
+          <div class="card bg-light mb-3 cards" id="ans2" value="2">
             <div class="card-body answer" value="2">
               <h4 class="card-title noMargin" value="2"><span id="opt2" value="2">Option 2: </span></h4>
             </div>
           </div>
-          <div class="card bg-light mb-3 cards answer" id="ans3" value="3">
+          <div class="card bg-light mb-3 cards" id="ans3" value="3">
             <div class="card-body answer" value="3">
               <h4 class="card-title noMargin" value="3"><span id="opt3" value="3">Option 3: </span></h4>
             </div>
           </div>
-          <div class="card bg-light mb-3 cards answer" id="ans4" value="4">
+          <div class="card bg-light mb-3 cards" id="ans4" value="4">
             <div class="card-body answer" value="4">
               <h4 class="card-title noMargin" value="4"><span id="opt4" value="4">Option 4: </span></h4>
             </div>
